--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-storybook": "^0.8.0",
     "jsdom": "^24.0.0",
+    "sass": "^1.72.0",
     "storybook": "^8.0.5",
     "typescript": "^5",
     "vitest": "^1.4.0"
