--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.25",
